--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -11,7 +11,7 @@
 i { border-bottom: 2px solid orange; font-style: normal; }
 
 .Inp { background-color: white; border: 1px solid lightgrey; border-radius:6px;
-        font-size: 14px; width:28px;height:28px; margin-bottom:16px;
+        font-size: 14px; width:28px;height:28px; margin-bottom:16px; outline:none;
 }
 .Inp:hover { border-color:red; cursor:pointer; }
 
