--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -41,7 +41,7 @@
 /*------------------------ Grey Style -------------------------*/
     .txtStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal 10.5pt Sans-serif; outline:none;
+      font: normal 13px Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .txtStyle b { border: 1px solid #ccc;
@@ -69,7 +69,7 @@
 /*------------------------ Blue Style -------------------------*/
     .blueStyle {
       border:1px solid #dde; padding:40px; border-radius:8px;
-      font: normal 10pt Verdana,Sans-serif; outline:none;
+      font: normal 13px Verdana,Sans-serif; outline:none;
       background-color:#eef; line-height: 1.3; color:#224;
     }
     .blueStyle b { border: 1px solid #ccd; color:#228;
@@ -97,7 +97,7 @@
 /*------------------------ Yellow Style -------------------------*/
     .yelStyle {
       border:1px solid #edd; padding:40px; border-radius:8px;
-      font: normal 10.5pt Sans-serif; outline:none;
+      font: normal 13px Sans-serif; outline:none;
       background-color:#ffa; line-height: 1.3; color:#622;
     }
     .yelStyle b { border: 1px solid #ed4; color:#622;
@@ -124,7 +124,7 @@
 /*------------------------ Normal Style -------------------------*/
     .nrmStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal 10pt Verdana, Sans-serif; outline:none;
+      font: normal 13px Verdana, Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .nrmStyle hr { border:none; border-top:1px dashed #99b; height:0px; }
@@ -145,7 +145,7 @@
 /*------------------------ Black Style -------------------------*/
     .blckStyle {
       border:1px solid #002; padding:40px; border-radius:8px;
-      font: normal 11pt Sans-serif; outline:none;
+      font: normal 13px Sans-serif; outline:none;
       background-color:#445; line-height: 1.3; color:#aae;
     }
     .blckStyle b {
