--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -41,7 +41,7 @@
 /*------------------------ Grey Style -------------------------*/
     .txtStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal 13px Sans-serif; outline:none;
+      font: normal 13px Arial,Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .txtStyle b { border: 1px solid #ccc;
@@ -55,21 +55,21 @@
     .txtStyle H1 { border: 1px solid #444; font-size:1.4em; color:#fff;
       background-color:#666; padding: 14px; border-radius:8px; font-weight:normal;
     }
-    .txtStyle H2 { border: 1px solid #ccc; font-size: 1em;
+    .txtStyle H2 { border: 1px solid #ccc; font-size: inherit;
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
     }
 /*.TB { font:normal 1em Sans-serif; }*/
-    .txtStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
-    .txtStyle td[q2] { vertical-align: top; padding-left:12px; }
+    .txtStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; font-family:inherit; }
+    .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; font-family:inherit; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
+    .txtStyle td[q2] { vertical-align: top; padding-left:12px; font-size:inherit;font-family:inherit; }
 
-    .txtStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#fff;
+    .txtStyle div[enum] { display: inline-block; width:20px; font-weight:bold; font-size:1.2em;font-family:inherit; color:#fff;
       background-color:#666; padding:6px; border-radius:8px; text-align:center; }
 
 /*------------------------ Blue Style -------------------------*/
     .blueStyle {
       border:1px solid #dde; padding:40px; border-radius:8px;
-      font: normal 13px Verdana,Sans-serif; outline:none;
+      font: normal 10pt Verdana,Sans-serif; outline:none;
       background-color:#eef; line-height: 1.3; color:#224;
     }
     .blueStyle b { border: 1px solid #ccd; color:#228;
@@ -87,17 +87,17 @@
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
     }
 
-    .blueStyle td[qL] { vertical-align: top; padding-right:12px; color:blue; text-align:right; width: 60px; }
-    .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
-    .blueStyle td[q2] { vertical-align: top; padding-left:12px; }
+    .blueStyle td[qL] { vertical-align: top; padding-right:12px; color:blue; text-align:right; width: 60px; font-family:inherit; }
+    .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; font-family:inherit; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
+    .blueStyle td[q2] { vertical-align: top; padding-left:12px; font-size:inherit;font-family:inherit; }
 
-    .blueStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#fff;
+    .blueStyle div[enum] { display: inline-block; width:20px; font-weight:bold; font-size:1.2em;font-family:inherit; color:#fff;
       background-color:#669; padding:6px; border-radius:8px; text-align:center; }
 
 /*------------------------ Yellow Style -------------------------*/
     .yelStyle {
       border:1px solid #edd; padding:40px; border-radius:8px;
-      font: normal 13px Sans-serif; outline:none;
+      font: normal 13px Arial,Sans-serif; outline:none;
       background-color:#ffa; line-height: 1.3; color:#622;
     }
     .yelStyle b { border: 1px solid #ed4; color:#622;
@@ -115,20 +115,21 @@
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
     }
 
-    .yelStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
-    .yelStyle td[q2] { vertical-align: top; padding-left:12px; }
+    .yelStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; font-family:inherit; }
+    .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; font-family:inherit; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
+    .yelStyle td[q2] { vertical-align: top; padding-left:12px; font-size:inherit;font-family:inherit; }
 
-    .yelStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#622;
+    .yelStyle div[enum] { display: inline-block; width:20px; font-weight:bold; font-size:1.2em;font-family:inherit; color:#622;
       background-color:#ee4; padding:6px; border-radius:8px; text-align:center; }
 /*------------------------ Normal Style -------------------------*/
     .nrmStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal 13px Verdana, Sans-serif; outline:none;
+      font: normal 10pt Verdana,Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .nrmStyle hr { border:none; border-top:1px dashed #99b; height:0px; }
-    .nrmStyle sup, .nrmStyle sub { color:red; font-size:7pt; }
+    .nrmStyle b { color:#226; }
+    .nrmStyle i { color:#22c; font-style:normal; }
     .nrmStyle H1 { border: 1px solid #444; font-size:1.4em; color:#fff;
       background-color:#666; padding: 14px; border-radius:8px; font-weight:normal;
     }
@@ -136,16 +137,16 @@
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
     }
 
-    .nrmStyle td[qL] { vertical-align: top; padding-right:12px; color:#99b; text-align:right; width: 60px; }
-    .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
-    .nrmStyle td[q2] { vertical-align: top; padding-left:12px; }
+    .nrmStyle td[qL] { vertical-align: top; padding-right:12px; color:#99b; text-align:right; width: 60px; font-family:inherit; }
+    .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; font-family:inherit; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
+    .nrmStyle td[q2] { vertical-align: top; padding-left:12px; font-size:inherit;font-family:inherit; }
 
-    .nrmStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#fff;
+    .nrmStyle div[enum] { display: inline-block; width:20px; font-weight:bold; font-size:1.2em;font-family:inherit; color:#fff;
       background-color:#666; padding:6px; border-radius:8px; text-align:center; }
 /*------------------------ Black Style -------------------------*/
     .blckStyle {
       border:1px solid #002; padding:40px; border-radius:8px;
-      font: normal 13px Sans-serif; outline:none;
+      font: normal 13px Arial,Sans-serif; outline:none;
       background-color:#445; line-height: 1.3; color:#aae;
     }
     .blckStyle b {
@@ -163,11 +164,11 @@
       background-color:#889; padding: 16px; border-radius:8px; font-weight:normal;
     }
 
-    .blckStyle td[qL] { vertical-align: top; padding-right:12px; color:#000; text-align:right; width: 60px; }
-    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
-    .blckStyle td[q2] { vertical-align: top; padding-left:12px; }
+    .blckStyle td[qL] { vertical-align: top; padding-right:12px; color:#000; text-align:right; width: 60px; font-family:inherit; }
+    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; font-family:inherit; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
+    .blckStyle td[q2] { vertical-align: top; padding-left:12px; font-size:inherit; font-family:inherit; }
 
-    .blckStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#aae;
+    .blckStyle div[enum] { display: inline-block; width:20px; font-weight:bold; font-size:1.2em;font-family:inherit; color:#aae;
       background-color:#000; padding:6px; border-radius:8px; text-align:center; }
 
   </style>
@@ -185,10 +186,10 @@
   <div class='sel' title='Theme (template)'>
   <i class="fa fa-image"></i>
   <select onChange='toggleClass(this)'>
-        <option value='txtStyle' selected>Grey</option>
+        <option value='txtStyle'>Grey</option>
         <option value='blueStyle'>Blue</option>
         <option value='yelStyle'>Yellow</option>
-        <option value='nrmStyle'>Normal</option>blckStyle
+        <option value='nrmStyle' selected>Normal</option>blckStyle
         <option value='blckStyle'>Dark</option>
   </select>
   </div>
@@ -288,7 +289,7 @@
 
 </div>
 <div id='inCapsul' style='overflow-y:auto'>
-<table><tr><td id='txt' class='txtStyle' contentEditable>...</td></tr></table>
+<table><tr><td id='txt' class='nrmStyle' contentEditable>...</td></tr></table>
 </div>
 
 <div id="modal-w" class="modal">
@@ -411,7 +412,7 @@
 
   function insQuote() {
     let s = gSel(); if(!s) s='...';
-    exe('insertHTML','<table style="font-size:1em;"><tr><td q1>❝</td><td q2>' + s + '</td></tr></table>');
+    exe('insertHTML','<table><tr><td q1>❝</td><td q2>' + s + '</td></tr></table>');
   }
   
   function gSel() {
@@ -426,7 +427,7 @@
     var Fs = prompt('Enter Ordered/Unordered/Enum/Big + number of row (ex: o3, u5, e4, b5):','u'+(cnt?cnt:3));
     if(Fs && ('oueb'.indexOf(F=Fs.charAt(0))>-1)) {
       var r = parseInt(Fs.substr(1),10), pref = (F!='b')?'<tr><td qL>':'<tr><td q1>'; if(F=='b') F='o';
-      var T = '<table border="0" cellSpacing="0" style="font-size:1em">';
+      var T = '<table border="0" cellSpacing="0">';
       for(let i=0; i<r; i++)
       T += pref + (F=='u'?'▸':(F=='o'?(i+1)+'.':('<div enum>'+ String.fromCharCode(65+i) +'</div>'))) +'</td><td q2>'+ (i<cnt?arr[i]:'...') +'<br><br></td></tr>';
       exe('insertHTML', T + '</table>');
@@ -460,10 +461,10 @@
     var par, s = window.getSelection().toString();
     var F = prompt('Enter Cols|Rows|Style:', iRemark); if(!F) return; par = F.split('|'); if(par.length<2) return; iRemark = F;
       const cls = par[0].split(','), clsL = cls.length, rws = par[1], dc = (clsL==2 && rws==1 && s);
-      var T = '<table border="0" cellSpacing="0" style="font-size:1em;'+ par[2] +'">';
+      var T = '<table border="0" cellSpacing="0" style="'+ par[2] +'">';
       for(let r=0; r<rws; r++) {
         T += '<tr>';
-        for(let c=0; c<clsL; c++) T += '<td valign="top" width="' + cls[c] + '">' + (dc?(c?s:'⚑'):'*') + '</td>';
+        for(let c=0; c<clsL; c++) T += '<td q2 width="' + cls[c] + '">' + (dc?(c?s:'⚑'):'*') + '</td>';
         T += '</tr>';
       }
       exe('insertHTML', T + '</table>');
@@ -537,7 +538,7 @@
   function insColumns() {
     let Fs = prompt('Padding, Separation line style:','10px,1px solid lightgrey'); if(!Fs) return;
     let s = Fs.split(','); if(s.length<2) return;
-    exe('insertHTML','<table style="table-layout:fixed;width:100%;font-size:1em;"><tr><td valign="top" style="padding-right:'+ s[0] +';border-right:'+ s[1] +'">*</td><td valign="top" style="padding-left:'+ s[0] +';">*</td></tr></table>');
+    exe('insertHTML','<table style="table-layout:fixed;width:100%;"><tr><td valign="top" style="font-size:inherit;font-family:inherit;padding-right:'+ s[0] +';border-right:'+ s[1] +'">*</td><td valign="top" style="font-size:inherit;font-family:inherit;padding-left:'+ s[0] +';">*</td></tr></table>');
   }
   
   function removeDiacrit() {
