--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -41,7 +41,7 @@
 /*------------------------ Grey Style -------------------------*/
     .txtStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal 13px Arial,Sans-serif; outline:none;
+      font: normal 10.5pt Arial,Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .txtStyle b { border: 1px solid #ccc;
@@ -97,7 +97,7 @@
 /*------------------------ Yellow Style -------------------------*/
     .yelStyle {
       border:1px solid #edd; padding:40px; border-radius:8px;
-      font: normal 13px Arial,Sans-serif; outline:none;
+      font: normal 10.5pt Arial,Sans-serif; outline:none;
       background-color:#ffa; line-height: 1.3; color:#622;
     }
     .yelStyle b { border: 1px solid #ed4; color:#622;
@@ -146,7 +146,7 @@
 /*------------------------ Black Style -------------------------*/
     .blckStyle {
       border:1px solid #002; padding:40px; border-radius:8px;
-      font: normal 13px Arial,Sans-serif; outline:none;
+      font: normal 10.5pt Arial,Sans-serif; outline:none;
       background-color:#445; line-height: 1.3; color:#aae;
     }
     .blckStyle b {
