--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -59,6 +59,7 @@ function busy(ob) {
     ob.className = 'Inp fa fa-refresh fa-spin';
     return;
   }
+  alert(ob.tagName + '\n' + _busyIC);
   ob.style.backgroundColor = '';
   ob.className = _busyIC;
 }
