--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -50,11 +50,11 @@ function setCont(_cnt) {
   id('InpFile').textContent = totFiles[curFile].name;
 }
 
-var _busyIC;
+var _busyIC = null;
 function busy(ob) {
   alert(ob?ob.tagName:'No object supplied');
   if(!ob) return; ob=ob.firstChild;
-  if(ob.style.backgroundColor != '#FF0') {
+  if(!_busyIC) {
     ob.style.backgroundColor = '#FF0';
     var _busyIC = ob.className;
     ob.className = 'Inp fa fa-refresh fa-spin';
@@ -63,6 +63,7 @@ function busy(ob) {
   alert(ob.tagName + '\n' + _busyIC);
   ob.style.backgroundColor = '';
   ob.className = _busyIC;
+  _busyIC = null;
 }
 
 function Http( _btn, _meth, _resrc, _msg, _callback ){
@@ -204,8 +205,8 @@ function reAddress(o) { o.href = 'down/' + totFiles[curFile].name; return true; 
   <button onClick='Save(this)' title='Save content' class="Inp fa fa-save"></button><br>
   <a href='down/eng.txt' onClick='reAddress(this)' title='Download the file' class='Inp fa fa-download' style='color:#000; padding-top:10px; text-decoration:none; text-align:center;'></a><br>
 
-  <button onClick='saveMng(this,curFile)' title='Save to DB' class='Inp'><i class="fa fa-pencil"></i></button><br>
-  <button onClick='readMng(this,curFile)' title='Read from DB' class='Inp'><i class="fa fa-upload"></i></button><br>
+  <button onClick='saveMng(this,curFile)' title='Save to DB' class='Inp'><span class="fa fa-pencil"></span></button><br>
+  <button onClick='readMng(this,curFile)' title='Read from DB' class='Inp'><span class="fa fa-upload"></span></button><br>
   
 </div>
 
