--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -56,7 +56,7 @@ function busy(ob) {
   if(!ob) return; ob=ob.firstChild;
   if(_busyIC == null) {
     ob.style.backgroundColor = '#FF0';
-    var _busyIC = ob.className;
+    _busyIC = ob.className;
     ob.className = 'Inp fa fa-refresh fa-spin';
     return;
   }
