--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -111,11 +111,10 @@ function saveMng(bt,Fid) {
 
 function dwnLoad(bt,Fid) {
   if(TglSrch) return;
+  busy(bt);
   _putCnt(Fid);
-  const msg = JSON.stringify({ action: 'download', file: totFiles[Fid].name, content: totFiles[Fid].depot, collection: 'files' });
-  Http(bt, 'mng', msg, null);
-  totFiles[Fid].saved = true;
-  id("InpFile").style.color = '';
+  id('beforePost').value = JSON.stringify({ action: 'download', file: totFiles[Fid].name, content: totFiles[Fid].depot, collection: 'files' });
+  busy(bt);
 }
 
 function readMng(bt,Fid) {
@@ -214,7 +213,11 @@ function reAddress(o) { o.href = 'down/' + totFiles[curFile].name; return true; 
   <button onClick='toggleFiles(this)' title='Toggle/exhange files' class="Inp fa fa-exchange"></button><br>
   <button onClick='Save(this)' title='Save content' class="Inp fa fa-save"></button><br>
   <!-- <a href='down/eng.txt' onClick='reAddress(this)' title='Download the file' class='Inp fa fa-download' style='color:#000; padding-top:10px; text-decoration:none; text-align:center;'></a><br> -->
-  <button onClick='dwnLoad(this,curFile)' title='Download file' class="Inp fa fa-download"></button><br>
+
+  <form id='Frm' style='display:inline' action='mng' method='POST' onSubmit='return dwnLoad();'>
+    <input id='beforePost' name='S' type="hidden" value="">
+    <button title='Download file' class="Inp fa fa-download"></button><br>
+  </form>
 
   <button onClick='saveMng(this,curFile)' title='Save to DB' class='Inp fa fa-pencil'></button><br>
   <button onClick='readMng(this,curFile)' title='Read from DB' class='Inp fa fa-upload'></button><br>
