--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -115,6 +115,7 @@ function dwnLoad(bt,Fid) {
   _putCnt(Fid);
   id('beforePost').value = JSON.stringify({ action: 'download', file: totFiles[Fid].name, content: totFiles[Fid].depot, collection: 'files' });
   busy(bt);
+  alert(id('beforePost').value);
   return true;
 }
 
