--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -111,11 +111,12 @@ function saveMng(bt,Fid) {
 
 function dwnLoad() {
   if(TglSrch) return;
-  let Fid = curFile, ob = id('beforePost');
+  let Fid = curFile, ob = id('bPostBtn');
   busy(ob);
   _putCnt(Fid);
-  ob.value = encodeURIComponent(JSON.stringify({ action: 'download', file: totFiles[Fid].name, content: totFiles[Fid].depot, collection: 'files' }));
-  setTimeout(function(){ busy(ob); },1000);
+//  id('beforePost').value = encodeURIComponent(JSON.stringify({ action: 'download', file: totFiles[Fid].name, content: totFiles[Fid].depot, collection: 'files' }));
+  id('beforePost').value = JSON.stringify({ action: 'download', file: totFiles[Fid].name, content: totFiles[Fid].depot, collection: 'files' });
+  setTimeout(function(){ busy(ob); },1500);
   return true;
 }
 
@@ -218,7 +219,7 @@ function reAddress(o) { o.href = 'down/' + totFiles[curFile].name; return true; 
 
   <form id='Frm' style='display:inline' action='mng' method='POST' enctype='text/plain' onSubmit='return dwnLoad();'>
     <input id='beforePost' name='S' type="hidden" value="">
-    <button title='Download file' class="Inp fa fa-download"></button><br>
+    <button id='bPostBtn' title='Download file' class="Inp fa fa-download"></button><br>
   </form>
 
   <button onClick='saveMng(this,curFile)' title='Save to DB' class='Inp fa fa-pencil'></button><br>
